# iDot_scheduler

./: LICENCE  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: input_template.xlsx  instructions.md
src/iDot_tools/: app.py  cli.py  constants.py  core.py  main.py  output_check_view.py  ui_utils.py  utils.py
src/iDot_tools/resources/: instructions.md
